# cli-chat-app

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  vcpkg-configuration.json
.cache/clangd/index/: client.cpp.9CA5C755B98B11B0.idx  client.hpp.58077D50BFCCA493.idx  common.cpp.A75C953DF2F56CEE.idx  common.cpp.D44559CCE38852C3.idx  common.hpp.552534BCC84F4F69.idx  common.hpp.AB9631D0FCDA0747.idx  debug.cpp.E95426EB04E63E8E.idx  debug.hpp.4B56A00F3C4A3FCB.idx  main.cpp.26F13D7D61DBCC63.idx  main.cpp.37B4D531D0FB6313.idx  ncursesUI.cpp.22D58EB4E97677CD.idx  ncursesUI.hpp.089D95615A3009D6.idx  network_session.cpp.04F6599EC87EB321.idx  network_session.hpp.7FF5089531180463.idx  server.cpp.795D5B2E9866E917.idx  server.hpp.2093F0B0F430317C.idx
client/src/: client.cpp  main.cpp  ncursesUI.cpp
client/src/headers/: client.hpp  ncursesUI.hpp
common/: common.cpp
common/headers/: common.hpp  debug.hpp  network_session.hpp  style.hpp
common/src/: common.cpp  debug.cpp  network_session.cpp  style.cpp
server/src/: main.cpp  server.cpp
server/src/headers/: server.hpp
